--- a/drivingexam/src/app/components/NavBar.module.css
+++ b/drivingexam/src/app/components/NavBar.module.css
@@ -1,6 +1,6 @@
 .navbar {
-  background-color: #1f2937; /* Tailwind: bg-gray-800 */
-  color: white;
+  background-color: #736fc8; /* Tailwind: bg-gray-800 */
+  color: black;
   padding: 1rem 2rem;
   display: flex;
   justify-content: space-between;
@@ -15,7 +15,7 @@
 
 .link {
   text-decoration: none;
-  color: white;
+  color: black;
 }
 
 .link:hover {
