--- a/drivingexam/src/app/modules/[moduleId]/topics/[topicId]/QuestionsPage.module.css
+++ b/drivingexam/src/app/modules/[moduleId]/topics/[topicId]/QuestionsPage.module.css
@@ -6,12 +6,14 @@
   font-size: 1.5rem;
   font-weight: bold;
   margin-bottom: 1rem;
+  color: black;
 }
 
 .card {
-  background-color: #1f2937;
+  background-color: #736fc8;
   padding: 1.5rem;
   border-radius: 0.5rem;
+  color: black;
 }
 
 .question {
